--- a/css/index.css
+++ b/css/index.css
@@ -2,39 +2,24 @@
 /*                                    MAIN                                    */
 /* -------------------------------------------------------------------------- */
 
-#mainSection {
-    width: 70%;
-    display: inline-grid;
-    justify-self: center;
-    margin: auto;
-}
-
 .block {
     margin: 10px;
-    background-color: antiquewhite;
+    /* background-color: antiquewhite; */
     border: solid black 1px;
+    border-radius: 10px;
+    cursor: pointer;
 }
 
-
-/* ------------------------------ PRESENTATION ------------------------------ */
-
-#presentation div {
-    padding: 10px;
-}
-
-#mainImg {
-    height: auto;
-    max-width: 100%;
-    width: 100%;
-    max-height: 300px;
-    object-fit: contain;
-}
 
 
 /* ---------------------------------- SOINS --------------------------------- */
 
 #soins {
     display: flex;
+}
+
+.block:hover {
+    color: darkblue;
 }
 
 @media (max-width:700px) {
@@ -57,7 +42,17 @@
     object-fit: contain;
 }
 
+#soins h3{
+    text-decoration: underline;
+
+}
 #soins h3,
 #soins p {
     padding: 10px
+}
+
+/* -------------------------------- rdvtarif -------------------------------- */
+
+#rdvtarif{
+    padding:10px;
 }
